Update and rename index1.html to gift.html

--- a/gift.html
+++ b/gift.html
@@ -7,7 +7,7 @@
     <title>Christmas surprise</title>
 </head>
 <body>
-    <h1>Merry Christmas and a properous New Year Mum and Dad</h1>
+    <h1>Merry Christmas and a prosperous New Year Mum and Dad</h1>
 </body>
 <style>
     body{
